; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_hash.c_mrb_hash_has_value.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_hash.c_mrb_hash_has_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.has_v_arg = type { i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"o\00", align 1
@FALSE = common dso_local global i32 0, align 4
@hash_has_value_i = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_hash_has_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_hash_has_value(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.has_v_arg, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @mrb_get_args(i32* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %5)
  %9 = load i32, i32* @FALSE, align 4
  %10 = getelementptr inbounds %struct.has_v_arg, %struct.has_v_arg* %6, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds %struct.has_v_arg, %struct.has_v_arg* %6, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @RHASH_TBL(i32 %14)
  %16 = load i32, i32* @hash_has_value_i, align 4
  %17 = call i32 @ht_foreach(i32* %13, i32 %15, i32 %16, %struct.has_v_arg* %6)
  %18 = getelementptr inbounds %struct.has_v_arg, %struct.has_v_arg* %6, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @mrb_bool_value(i32 %19)
  ret i32 %20
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*) #1

declare dso_local i32 @ht_foreach(i32*, i32, i32, %struct.has_v_arg*) #1

declare dso_local i32 @RHASH_TBL(i32) #1

declare dso_local i32 @mrb_bool_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
